Closed
Bug 165632
Opened 23 years ago
Closed 23 years ago
Get typeaheadfind building on mac
Categories
(SeaMonkey :: Find In Page, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.2alpha
People
(Reporter: aaronlev, Assigned: aaronlev)
References
Details
Attachments
(3 files, 1 obsolete file)
|
110.27 KB,
text/plain
|
netscape
:
review+
|
Details |
|
70.37 KB,
text/plain
|
netscape
:
review+
|
Details |
|
5.21 KB,
patch
|
netscape
:
review+
sfraser_bugs
:
superreview+
|
Details | Diff | Splinter Review |
I have all the MozillaBuildList.pl changes, I think.
I still need to generate the .xml build files.
Unfortunately, I'm having a lot of bad luck getting Mozilla to build on my Mac
at all. Tried pulling a fresh tree, getting CodeWarrior 7.2, but still no luck.
So I can't move forward on this at the moment.
| Assignee | ||
Updated•23 years ago
|
Blocks: isearch
Status: NEW → ASSIGNED
Priority: -- → P1
Hardware: PC → Macintosh
Target Milestone: --- → mozilla1.2alpha
| Assignee | ||
Comment 1•23 years ago
|
||
Hmmm, I'm closer but I keep getting
# Error: Can't create a Finder alias at
(:mozilla:dist:viewer_debug:Components:typeaheadfindDebug.shlb")
for :mozilla:extensions:typeaheadfind:macbuild:typeaheadfindDebug.shlb because
:mozilla:extensions:typeaheadfind:macbuild:typeaheadfindDebug.shlb does not exist.
| Assignee | ||
Comment 2•23 years ago
|
||
| Assignee | ||
Updated•23 years ago
|
Attachment #98679 -
Attachment description: First xml build file → typeaheadfind/macbuild/typeaheadfind.xml
| Assignee | ||
Comment 3•23 years ago
|
||
| Assignee | ||
Comment 4•23 years ago
|
||
Comment 5•23 years ago
|
||
Comment on attachment 98681 [details] [diff] [review]
Diff for the rest of the changes, when combined with xml attachments this should be everything
MozillaBuildFlags.txt contains a change to the 'pull' variable. We probably
don't want that.
When you combine separate patches, please make sure that they start from the
same directory. Otherwise, just attach them as separate files.
Attachment #98681 -
Flags: needs-work+
Comment 6•23 years ago
|
||
I applied the patches, dropped in the xml files and everything seems to have
built properly. And typeaheadfind works in my cfm build.
Comment 7•23 years ago
|
||
Comment on attachment 98679 [details]
typeaheadfind/macbuild/typeaheadfind.xml
r=cls
Attachment #98679 -
Flags: review+
Comment 8•23 years ago
|
||
Comment on attachment 98680 [details]
typeaheadfind/macbuild/typeaheadfindIDL.xml
r=cls
Attachment #98680 -
Flags: review+
Comment 10•23 years ago
|
||
Comment on attachment 98855 [details] [diff] [review]
Whoops - good catch! Removes the change the "pull" line
r=cls
Attachment #98855 -
Flags: review+
Comment 11•23 years ago
|
||
Comment on attachment 98855 [details] [diff] [review]
Whoops - good catch! Removes the change the "pull" line
Just a minor spacing issue here:
+ {
+
MakeAlias(":mozilla:extensions:typeaheadfind:resources:locale:en-US:typeaheadfi
nd.properties", "$resource_dir");
+ }
sr=sfraser
Attachment #98855 -
Flags: superreview+
| Assignee | ||
Comment 12•23 years ago
|
||
Should work in tomrrow's Mozilla trunk builds, if we are blessed by the mac deities
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 13•23 years ago
|
||
yep, it's there --vrfy'd fixed with 2002.09.20.08 mozilla trunk bits in mac os 10.2.
Status: RESOLVED → VERIFIED
Updated•17 years ago
|
Product: Core → SeaMonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•