Bug 165632. Get typeaheadfind into mac build. This does not check it into the mac installer. r=cls, sr=sfraser